# rubber-duckies

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  pch.h  vcpkg.json
common/: CMakeLists.txt
common/include/: duckies_types.h
readers/: CMakeLists.txt
readers/include/: csv_reader.h  file_reader.h  json_reader.h
readers/src/: csv_reader.cpp
tools/: generate_records.py
